--- a/app/src/main/res/layout/list_item_cell.xml
+++ b/app/src/main/res/layout/list_item_cell.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/cell_pos"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="20dp"
+        android:layout_height="15dp"
         android:background="@color/red_400"
         android:gravity="center"
         android:textSize="12sp" />
