--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="24dp"
         android:contentDescription="@string/starts_the_next_generation"
-        app:layout_constraintBottom_toBottomOf="@+id/loadButton"
+        app:layout_constraintBottom_toBottomOf="@+id/load_button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/loadButton"
+        app:layout_constraintTop_toTopOf="@+id/load_button"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
@@ -31,30 +31,41 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/loadButton"
+        android:id="@+id/load_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:text="@string/load"
-        app:layout_constraintBottom_toBottomOf="@+id/saveButton"
+        app:layout_constraintBottom_toBottomOf="@+id/save_button"
         app:layout_constraintEnd_toStartOf="@+id/next_gen_button"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/saveButton"
-        app:layout_constraintTop_toTopOf="@+id/saveButton"
+        app:layout_constraintStart_toEndOf="@+id/save_button"
+        app:layout_constraintTop_toTopOf="@+id/save_button"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/saveButton"
+        android:id="@+id/save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="23dp"
         android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="@+id/auto_button"
-        app:layout_constraintEnd_toStartOf="@+id/loadButton"
+        app:layout_constraintEnd_toStartOf="@+id/load_button"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/auto_button"
         app:layout_constraintTop_toTopOf="@+id/auto_button"
         app:layout_constraintVertical_bias="0.625" />
+
+    <Button
+        android:id="@+id/clone_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="21dp"
+        android:text="@string/clone_to_new_activity"
+        app:layout_constraintBottom_toTopOf="@+id/save_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
