--- a/app/src/main/res/layout/fragment_cell_list.xml
+++ b/app/src/main/res/layout/fragment_cell_list.xml
@@ -2,5 +2,5 @@
 <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cell_recycler_view"
     android:layout_width="match_parent"
-    android:layout_height="650dp" />
+    android:layout_height="wrap_content" />
 
